fix: cubes collapse

--- a/src/components/ExploreCubes/index.module.less
+++ b/src/components/ExploreCubes/index.module.less
@@ -13,6 +13,9 @@
 }
 
 .collapse {
+  * {
+    // padding: 0 !important;
+  }
   background: transparent;
 }
 
@@ -38,8 +41,7 @@
 }
 
 .panel :global(.ant-collapse-content-box) {
-  padding-top: 5px !important;
-  padding-bottom: 0 !important;
+  padding: 5px 0 0 !important;
 }
 
 .categorySection {
